--- a/livingdigitalmedia/assets/css/main.css
+++ b/livingdigitalmedia/assets/css/main.css
@@ -5074,61 +5074,13 @@ background-color: #fff;
 			box-shadow: 0 0 1.5rem 0 rgba(0, 0, 0, 0.2);
 			visibility: visible;
 		}
-      
-        
-        
-        .scroll-container {
-  height: 100vh;
-  width: 100%;
-  overflow-y: auto;
-}
-
-.navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    min-height: 60px;
-    color: #333333;
-    background: #ffffff;
-    overflow: hidden;
-    z-index: 1000;
-    -webkit-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .1);
-    -moz-box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .1);
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, .1);
-}
-
-.navbar-brand a {
-    text-decoration: none;
-    color: #0097e6;
-}
-
-.navbar .container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-}
-
-.menu-item {
-    display: inline-block;
-    font-size: 1.125rem;
-    text-decoration: none;
-    padding: 1rem;
-    color: inherit;
-}
-
-.menu-item:hover {
-    background: rgba(0, 0, 0, 0.1);
-}
-
-.menu-item.active {
-    background: #00a8ff;
-    color: #ffffff;
+       
+div.sticky {
+  position: sticky;
+  top: 0;
+background-color: gray;
+  padding: 50px;
+  font-size: 14px;
 }
  
 
