--- a/livingdigitalmedia/assets/css/main.css
+++ b/livingdigitalmedia/assets/css/main.css
@@ -118,6 +118,7 @@ input, select, textarea {
 
 /* Style the button that is used to open and close the collapsible content */
 
+
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .collapsible:hover {
   background-color: #ccc;
@@ -125,10 +126,10 @@ input, select, textarea {
 
 /* Style the collapsible content. Note: hidden by default */
 .content {
-  padding: 0 18px;
+  padding: 0 0px;
   display: none;
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: white;
 }
 
 /* Type */
@@ -4151,6 +4152,7 @@ background-color: #fff;
 
 		#main > .post {
 			padding: 8rem 8rem 6rem 8rem ;
+            background-color: #ffffff
 		}
 
 			#main > .post header.major > .date {
@@ -4852,18 +4854,7 @@ background-color: #fff;
     width: 100%;
     
 }
-/* Margins and Fonts? Look to add tomorrow.*/
-.audiofooter {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: black;
-  color: white;
-  text-align: left;
-      margin-left: 21px;
-}
+
 /* Nav Panel */
 
 	#navPanelToggle {
@@ -5087,6 +5078,22 @@ background-color: whitesmoke;
 			background: #00a8ff;
 			color: #ffffff;
 		}
- 
+figure {
+    border: thin #c0c0c0 solid;
+    display: flex;
+    flex-flow: column;
+    padding: 5px;
+    max-width: 100%;
+    margin: 0 0 1.5rem 0;
+}
+        
+figcaption {
+    background-color: #222;
+    color: #fff;
+    font: small "Merriweather", Georgia, serif;
+    padding: 15px;
+    text-align: justify;
+}
+        
 
 	}
